# midi-smf-writer

./: CMakeLists.txt  README.md  git-status-deps.sh
.github/workflows/: teensy.yml  ubuntu_x64_cmake.yml
cmake/: install_arduino_library.cmake  midi_smf_writer.cmake.in
cmake/toolchains/: teensy41.cmake  teensy41.toolchain.cmake
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  midiread.cpp  midiread.ino
examples/midirecord/: CMakeLists.txt  midirecord.cpp
src/: CMakeLists.linux.cmake  CMakeLists.teensy.cmake  CMakeLists.txt  DeltaTimeSequencer.h  smfwriter.cpp  smfwriter.h
test/: CMakeLists.txt  default_test_fixture.h  readme.MD  test_deltatimesequencer.cpp  test_read_midi.cpp
