cmake_minimum_required(VERSION 3.5)

project(midi_smf_writer C CXX)

if (NOT DEFINED TEENSY_VERSION)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
endif()

if (NOT DEFINED BUILD_FOR_LINUX)   
    import_arduino_library(cores ${COREPATH} avr debug util)
    import_arduino_library(SPI ${DEPSPATH}/SPI)
    import_arduino_library(SdFat ${DEPSPATH}/SdFat/src common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library(SD ${DEPSPATH}/SD/src)
    import_arduino_library(MIDI ${DEPSPATH}/MIDI/src)
    add_subdirectory(src)
    add_subdirectory(examples)
else()
    set(CMAKE_CXX_STANDARD 14)
    include(cmake_declare_and_fetch.cmake.in)
    DeclareAndFetch(teensy_x86_stubs                https://github.com/newdigate/teensy-x86-stubs.git feature/shared_serial src)
    DeclareAndFetch(teensy_x86_sd_stubs             https://github.com/newdigate/teensy-x86-sd-stubs.git noinstall src)
    add_subdirectory(src)
    if(DEFINED BUILD_EXAMPLES)
        DeclareAndFetch(rtmidi                      https://github.com/thestk/rtmidi.git master "/")
        DeclareAndFetch(teensy_x86_midi_stubs       https://github.com/newdigate/teensy-x86-midi-stubs noinstall src)
            DeclareAndFetchSubLibrary(teensy_x86_midi_stubs     extras/rtmidi/src)
        add_subdirectory(examples)
    endif ()
    if(DEFINED BUILD_TESTS)
        DeclareAndFetch(midi_smf_reader            https://github.com/newdigate/midi-smf-reader.git noinstall src)
        add_subdirectory(test)
    endif ()
endif()